2005-02-02  Sarfraaz Ahmed <asarfraaz@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (discard_alarm):
	Fixed a leak
	* calendar/e-cal-backend-exchange.c : Removed a typo.
	* camel/camel-exchange-store.c (make_folder_info): Mark the inbox
	flag which is newly added in camel.
	* camel/camel-stub-constants.h : Declare the new camel flags.
	* mail/mail-stub-exchange.c (get_folder_info): Set the flag for
	inbox folder

2005-02-01  Rodrigo Moya <rodrigo@novell.com>

	* calendar/e-cal-backend-exchange-calendar.c (create_object,
	modify_object_with_href, remove_object): removed usage of
	removed categories API.

2005-01-29  Sarfraaz Ahmed <asarfraaz@novell.com>

        * storage/exchange-hierarchy-webdav.c (hierarchy_new_folder):
        Check for duplicate entried being added into the hashtable.
        Fixes #68330

2005-01-28  Žygimantas Beručka  <uid0@akl.lt>

	* configure.in (ALL_LINGUAS): Added 'lt' (Lithuanian).

2005-01-27  Sushma Rai  <rsushma@novell.com>

	* exchange-config-listener.[ch] (add_esource)(remove_esource): 
	Changed the arguments for the function. Now reading folder type,
	instead of is_contact_folder flag. 
	Defined Gconf Key values in the header file so that it need not be
	defined by every function calling add/remove esource functions.
	Selecting calendar and tasks automatically, when the account or folder
	is created and unsetting when account or folder is removed.
	(add_sources)(remove_sources): Sending folder type to add_esource()/
	remove_esource() functions. Fixes #71432
	
	* storage/e-folder-exchange.c (e_folder_exchange_new)
	(e_folder_exchange_delete): Similar.

	* storage/exchange-hierarchy-gal.c (exchange_hierarchy_gal_new): Similar
	
	* storage/exchange-hierarchy-foreign.c (remove_folder)
	(exchange_hierarchy_foreign_add_folder): Similar.

	* storage/exchange-hierarchy-favorites.c (remove_folder): Similar.

	* storage/exchange-hierarchy-webdav.c (xfer_folder): Similar.

2005-01-25  Sarfraaz Ahmed <asarfraaz@novell.com>
