@@ -1,3 +1,8 @@
+2005-02-02  JP Rosevear  <jpr@novell.com>
+
+	* storage/main.c (main): bind to the GETTEXT_PACKAGE domain, not
+	PACKAGE
+
 2005-02-02  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* calendar/e-cal-backend-exchange-calendar.c (discard_alarm):
